[package]
name = "excretor"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "excretor"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "chrono",
] }
askama = "0.12.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio-util = { version = "0.7.11", features = ["io"] }
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.4", features = [
    "rustls-tls",
], default-features = false }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
cookie = {version = "0.18.1", features = ["secure"]}
axum-extra = {version = "0.9.3", features = ["cookie"]}
